--- a/src/App.css
+++ b/src/App.css
@@ -19,38 +19,38 @@ a {
   background: -moz-linear-gradient(
     45deg,
     rgba(57, 175, 163, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(250, 251, 219, 1) 100%
   );
 
   /* safari 5.1+,chrome 10+ */
   background: -webkit-linear-gradient(
     45deg,
     rgba(57, 175, 163, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(250, 251, 219, 1) 100%
   );
 
   /* opera 11.10+ */
   background: -o-linear-gradient(
     45deg,
     rgba(57, 175, 163, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(250, 251, 219, 1) 100%
   );
 
   /* ie 6-9 */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#39AFA3', GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFBDB', endColorstr='#39AFA3', GradientType=1 );
 
   /* ie 10+ */
   background: -ms-linear-gradient(
     45deg,
     rgba(57, 175, 163, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(250, 251, 219, 1) 100%
   );
 
   /* global 94%+ browsers support */
   background: linear-gradient(
     45deg,
     rgba(57, 175, 163, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(250, 251, 219, 1) 100%
   );
 }
 
