added what is selfocus container to app

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --font-family: "Manrope", sans-serif;
 
   --gradient-text: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
-  --gradient-bar: linear-gradient(45deg,  #39afa3,  #fafbdb);
+  --gradient-bar: linear-gradient(103.22deg, #ae67fa -13.86%, #f49867 99.55%);
   --color-bg: #f2f4f7;
   --color-footer: #eaecf0;
   --color-text: #000;
