--- a/src/containers/whatSelfocus/whatSelfocus.css
+++ b/src/containers/whatSelfocus/whatSelfocus.css
@@ -1,4 +1,4 @@
-.gpt3__whatgpt3 {
+.selfocus__whatselfocus {
   display: flex;
   flex-direction: column;
 
@@ -48,47 +48,21 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.gpt3__whatgpt3-feature {
+.selfocus__whatselfocus-feature {
   display: flex;
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-feature .gpt3__features-container__feature {
+.selfocus__whatselfocus-feature .gpt3__features-container__feature {
   margin: 0;
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+.selfocus__whatselfocus-feature .gpt3__features-container_feature-text {
   max-width: 700px;
 }
 
-.gpt3__whatgpt3-heading {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
-  margin: 4rem 0 2rem;
-}
-
-.gpt3__whatgpt3-heading h1 {
-  font-size: 34px;
-  line-height: 45px;
-  font-weight: 800;
-  font-family: var(--font-family);
-  max-width: 510px;
-}
-
-.gpt3__whatgpt3-heading p {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 30px;
-  color: var(--color-subtext);
-  cursor: pointer;
-}
-
-.gpt3__whatgpt3-image {
+.selfocus__whatselfocus-image {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -96,7 +70,7 @@
   margin-top: 5rem;
 }
 
-.gpt3__whatgpt3-image img {
+.selfocus__whatselfocus-image img {
   width: 99%;
   height: 99%;
 }
@@ -115,32 +89,15 @@
   margin-top: 0.5rem;
 }
 
-@media screen and (max-width: 850px) {
-  .gpt3__whatgpt3-heading {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 0rem;
-  }
-
-  .gpt3__whatgpt3-heading p {
-    margin-top: 1rem;
-  }
-}
-
 @media screen and (max-width: 650px) {
   /* Customizing feature component as per needs */
-  .gpt3__whatgpt3-feature .gpt3__features-container__feature {
+  .selfocus__whatselfocus-feature .gpt3__features-container__feature {
     flex-direction: column;
   }
 
   /* Customizing feature component as per needs */
-  .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+  .selfocus__whatselfocus-feature .gpt3__features-container_feature-text {
     margin-top: 0.5rem;
-  }
-
-  .gpt3__whatgpt3-heading h1 {
-    font-size: 28px;
-    line-height: 40px;
   }
 }
 
