--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,36 +1,36 @@
-.gpt3__navbar {
+.selfocus__navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 2rem 6rem;
 }
 
-.gpt3__navbar-links {
+.selfocus__navbar-links {
   flex: 1;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-.gpt3__navbar-links_title {
+.selfocus__navbar-links_title {
   margin-right: 2rem;
   font-size: 20px;
 }
 
-.gpt3__navbar-links_container {
+.selfocus__navbar-links_container {
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__navbar-sign {
+.selfocus__navbar-sign {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.gpt3__navbar-links_container p,
-.gpt3__navbar-sign p,
-.gpt3__navbar-menu_container p {
+.selfocus__navbar-links_container p,
+.selfocus__navbar-sign p,
+.selfocus__navbar-menu_container p {
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
@@ -40,8 +40,8 @@
   cursor: pointer;
 }
 
-.gpt3__navbar-sign button,
-.gpt3__navbar-menu_container button {
+.selfocus__navbar-sign button,
+.selfocus__navbar-menu_container button {
   padding: 0.5rem 1rem;
   color: #fff;
   background: #ff4820;
@@ -55,17 +55,17 @@
   border-radius: 5px;
 }
 
-.gpt3__navbar-menu {
+.selfocus__navbar-menu {
   margin-left: 1rem;
   display: none;
   position: relative;
 }
 
-.gpt3__navbar-menu svg {
+.selfocus__navbar-menu svg {
   cursor: pointer;
 }
 
-.gpt3__navbar-menu_container {
+.selfocus__navbar-menu_container {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -82,44 +82,44 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
-.gpt3__navbar-menu_container p {
+.selfocus__navbar-menu_container p {
   margin: 1rem 0;
 }
 
-.gpt3__navbar-menu_container-links-sign {
+.selfocus__navbar-menu_container-links-sign {
   display: none;
 }
 
 @media screen and (max-width: 1050px) {
-  .gpt3__navbar-links_container {
+  .selfocus__navbar-links_container {
     display: none;
   }
 
-  .gpt3__navbar-menu {
+  .selfocus__navbar-menu {
     display: flex;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .gpt3__navbar {
+  .selfocus__navbar {
     padding: 2rem 4rem;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .gpt3__navbar {
+  .selfocus__navbar {
     padding: 2rem;
   }
 
-  .gpt3__navbar-sign {
+  .selfocus__navbar-sign {
     display: none;
   }
 
-  .gpt3__navbar-menu_container {
+  .selfocus__navbar-menu_container {
     top: 20px;
   }
 
-  .gpt3__navbar-menu_container-links-sign {
+  .selfocus__navbar-menu_container-links-sign {
     display: block;
   }
 }
