--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,9 +1,9 @@
-.gpt3__header {
+.selfocus__header {
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__header-content {
+.selfocus__header-content {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@
   margin-right: 5rem;
 }
 
-.gpt3__header-content h1 {
+.selfocus__header-content h1 {
   font-family: var(--font-family);
   font-weight: 800;
   font-size: 40px;
@@ -20,7 +20,7 @@
   letter-spacing: -0.04em;
 }
 
-.gpt3__header-content p {
+.selfocus__header-content p {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 19px;
@@ -29,14 +29,14 @@
   margin-top: 1.5rem;
 }
 
-.gpt3__header-content__input {
+.selfocus__header-content__input {
   width: 100%;
   margin: 2rem 0 1rem;
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__header-content__input input {
+.selfocus__header-content__input input {
   flex: 2;
   width: 100%;
   min-height: 50px;
@@ -53,7 +53,7 @@
   border-bottom-left-radius: 5px;
 }
 
-.gpt3__header-content__input button {
+.selfocus__header-content__input button {
   flex: 0.6;
   width: 100%;
   min-height: 50px;
@@ -72,7 +72,7 @@
   text-transform: capitalize;
 }
 
-.gpt3__header-content__people {
+.selfocus__header-content__people {
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -81,12 +81,12 @@
   margin-top: 2rem;
 }
 
-.gpt3__header-content__people img {
+.selfocus__header-content__people img {
   width: 181.79px;
   height: 38px;
 }
 
-.gpt3__header-content__people p {
+.selfocus__header-content__people p {
   margin: 0 0 0 1rem;
   font-family: var(--font-family);
   font-weight: 500;
@@ -96,67 +96,67 @@
   text-align: center;
 }
 
-.gpt3__header-image {
+.selfocus__header-image {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.gpt3__header-image img {
+.selfocus__header-image img {
   width: 90%;
   height: 90%;
 }
 
 @media screen and (max-width: 1050px) {
-  .gpt3__header {
+  .selfocus__header {
     flex-direction: column;
   }
 
-  .gpt3__header-content {
+  .selfocus__header-content {
     margin: 0 0 3rem;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .gpt3__header-content h1 {
+  .selfocus__header-content h1 {
     font-size: 48px;
     line-height: 60px;
   }
 
-  .gpt3__header-content p {
+  .selfocus__header-content p {
     font-size: 16px;
     line-height: 24px;
   }
 
-  .gpt3__header-content__people {
+  .selfocus__header-content__people {
     flex-direction: column;
   }
 
-  .gpt3__header-content__people p {
+  .selfocus__header-content__people p {
     margin: 0;
   }
 
-  .gpt3__header-content__input input,
-  .gpt3__header-content__input button {
+  .selfocus__header-content__input input,
+  .selfocus__header-content__input button {
     font-size: 16px;
     line-height: 24px;
   }
 }
 
 @media screen and (max-width: 490px) {
-  .gpt3__header-content h1 {
+  .selfocus__header-content h1 {
     font-size: 36px;
     line-height: 48px;
   }
 
-  .gpt3__header-content p {
+  .selfocus__header-content p {
     font-size: 14px;
     line-height: 24px;
   }
 
-  .gpt3__header-content__input input,
-  .gpt3__header-content__input button {
+  .selfocus__header-content__input input,
+  .selfocus__header-content__input button {
     font-size: 12px;
     line-height: 16px;
   }
