changed what is selfocus section text color

--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,6 @@
   --color-bg: #f2f4f7;
   --color-footer: #eaecf0;
   --color-text: #000;
+  --color-text-modal: #81afdd;
   --color-subtext: #ff8a71;
 }
