--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -41,7 +41,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
-  color: #fff;
+  color: var(--color-text-modal);
 }
 
 @media screen and (max-width: 550px) {
