--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   --gradient-text: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
   --gradient-bar: linear-gradient(103.22deg, #ae67fa -13.86%, #f49867 99.55%);
-  --color-bg: #f2f4f7;
+  --color-bg: #f6f6e2;
   --color-footer: #eaecf0;
   --color-text: #000;
   --color-text-modal: #81afdd;
