--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -22,6 +22,14 @@
   color: #fff;
 }
 
+.selfocus__features-container__feature-title img {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: #39afa3 !important;
+  color: #39afa3 !important;
+  margin-bottom: 0.5rem;
+}
+
 .selfocus__features-container__feature-title div {
   width: 38px;
   height: 3px;
