--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -10,7 +10,12 @@
 
 /* Customizing feature component as per needs */
 .selfocus__features-feature .selfocus__features-container__feature {
-  margin: 0;
+  margin: 1rem;
+}
+
+.selfocus__features-feature .selfocus__features-container__feature-title h1 {
+  text-transform: uppercase;
+  font-size: 22px;
 }
 
 .selfocus__features-feature .selfocus__features-container_feature-text p {
