--- a/src/containers/whatSelfocus/whatSelfocus.css
+++ b/src/containers/whatSelfocus/whatSelfocus.css
@@ -1,50 +1,6 @@
 .selfocus__whatselfocus {
   display: flex;
   flex-direction: column;
-
-  padding: 2rem;
-  background: var(--color-footer);
-
-  /* ff 3.6+ */
-  background: -moz-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
-  /* safari 5.1+,chrome 10+ */
-  background: -webkit-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
-  /* opera 11.10+ */
-  background: -o-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
-  /* ie 10+ */
-  background: -ms-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
-  /* global 92%+ browsers support */
-  background: radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -54,7 +10,25 @@
 
 /* Customizing feature component as per needs */
 .selfocus__whatselfocus-feature .selfocus__features-container__feature {
-  margin: 0;
+  margin: 1rem;
+}
+
+.selfocus__whatselfocus-feature
+  .selfocus__features-container__feature-title
+  h1 {
+  text-transform: uppercase;
+  background: var(--gradient-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.selfocus__whatselfocus-feature .selfocus__features-container_feature-text p {
+  color: #000;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
 }
 
 /* Customizing feature component as per needs */
@@ -67,11 +41,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .selfocus__whatselfocus-image img {
-  width: 99%;
+  width: 100%;
   height: 99%;
 }
 
