--- a/src/containers/whatSelfocus/whatSelfocus.css
+++ b/src/containers/whatSelfocus/whatSelfocus.css
@@ -42,11 +42,13 @@
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
+  background-color: #39afa3;
+  padding: 2rem;
 }
 
 .selfocus__whatselfocus-image img {
   width: 100%;
-  height: 99%;
+  height: 90%;
 }
 
 @media screen and (max-width: 650px) {
