--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 6rem;
+  gap: 5rem;
 }
 
 .selfocus__footer-info {
@@ -45,4 +46,11 @@
   letter-spacing: normal;
   font-size: 1rem;
   line-height: 1.5;
+}
+
+@media screen and (max-width: 850px) {
+  .selfocus__footer {
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
