--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -53,7 +53,24 @@
   flex: 2 1;
 }
 
-.selfocus__cta-btn input {
+.selfocus__cta-btn_input {
+  flex: 2;
+  width: 100%;
+  min-height: 42px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 5px;
+  background: var(--color-footer);
+  border: 2px solid var(--color-footer);
+  padding: 0.3rem 1rem;
+  outline: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-radius: 0.5rem;
+}
+
+.selfocus__cta-btn_inputemailinvalid {
   width: 100%;
   min-height: 42px;
   font-family: var(--font-family);
@@ -70,6 +87,7 @@
 }
 
 .selfocus__cta-btn button {
+  flex: 1;
   background: #000;
   color: #fff;
   font-family: var(--font-family);
