--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -1,4 +1,4 @@
-.selfocus__cta-signup {
+.selfocus__signup {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -7,7 +7,7 @@
   flex: 2 1;
 }
 
-.selfocus__cta-signup_input {
+.selfocus__signup_input {
   flex: 2;
   width: 100%;
   min-height: 42px;
@@ -25,7 +25,7 @@
   min-width: 150px;
 }
 
-.selfocus__cta-signup_error {
+.selfocus__signup_error {
   color: #000;
   margin: 0.8rem 0.5rem;
   font-size: 20px;
@@ -33,7 +33,7 @@
   color: #cd104f;
 }
 
-.selfocus__cta-signup button {
+.selfocus__signup button {
   flex: 1;
   background: #000;
   color: #fff;
@@ -50,13 +50,13 @@
 }
 
 @media screen and (max-width: 650px) {
-  .selfocus__cta-signup {
+  .selfocus__signup {
     margin: 2rem 0 0;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .selfocus__cta-signup button {
+  .selfocus__signup button {
     font-size: 14px;
     line-height: 28px;
   }
