--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -7,7 +7,7 @@
   flex: 2 1;
 }
 
-.selfocus__signup_input {
+.selfocus__signup-input {
   flex: 2;
   width: 100%;
   min-height: 42px;
@@ -25,7 +25,7 @@
   min-width: 150px;
 }
 
-.selfocus__signup_error {
+.selfocus__signup-error {
   color: #000;
   margin: 0.8rem 0.5rem;
   font-size: 20px;
