added styling for smaller screen sizes

--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -48,6 +48,10 @@
   .selfocus__cta {
     flex-direction: column;
   }
+
+  .selfocus__cta-content {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -59,5 +63,17 @@
   .selfocus__cta-content h3 {
     font-size: 18px;
     line-height: 32px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .selfocus__cta .selfocus__signup {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .selfocus__cta-content h3 {
+    padding: 0rem 2rem;
   }
 }
