--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -61,3 +61,10 @@
     line-height: 28px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .selfocus__signup-input::-webkit-input-placeholder {
+    font-size: 0.8rem;
+    line-height: 28px;
+  }
+}
